--- a/src/main/webapp/html/header.html
+++ b/src/main/webapp/html/header.html
@@ -5,6 +5,8 @@
     <title>Teacher</title>
     <link rel="icon" href="../favicon.png">
     <link rel="stylesheet" href="../css/style.css" type="text/css" />
+    <link rel="stylesheet" href="../css/style-form.css" type="text/css" />
+    <link rel="stylesheet" href="css/fontawesome/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="../css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="../css/bootstrap-theme.min.css">
     <script src="../js/jquery-3.1.1.min.js"></script>
