--- a/src/main/webapp/html/teacher.html
+++ b/src/main/webapp/html/teacher.html
@@ -1,39 +1,63 @@
-<div class="container" style="margin-top: 5%;">
-    <div class="row">
-        <div class="col-md-4">
-            <h2 style="margin-bottom: 20px;">Факультет</h2>
-            <div class="list-group">
-                <button type="button" class="list-group-item">Cras justo odio</button>
-                <button type="button" class="list-group-item">Dapibus ac facilisis in</button>
-                <button type="button" class="list-group-item">Morbi leo risus</button>
-                <button type="button" class="list-group-item">Porta ac consectetur ac</button>
-                <button type="button" class="list-group-item">Vestibulum at eros</button>
-            </div>
-        </div>
-        <div class="col-md-4">
-            <h2 style="margin-bottom: 20px;">Список групп</h2>
-            <div class="list-group">
-                <button type="button" class="list-group-item">Cras justo odio</button>
-                <button type="button" class="list-group-item">Dapibus ac facilisis in</button>
-                <button type="button" class="list-group-item">Morbi leo risus</button>
-                <button type="button" class="list-group-item">Porta ac consectetur ac</button>
-                <button type="button" class="list-group-item">Vestibulum at eros</button>
-            </div>
-        </div>
-        <div class="col-md-4">
-            <h2 style="margin-bottom: 20px;">Список учащихся</h2>
-            <div class="list-group">
-                <button class="list-group-item">
-                    <input type="checkbox"> Check me out
-                </button>
-                <button class="list-group-item">
-                    <input type="checkbox"> Check me out
-                </button>
-                <button class="list-group-item">
-                    <input type="checkbox"> Check me out
-                </button>
-            </div>
-            <input type="checkbox"> Выбрать всех
-        </div>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="utf-8"/>
+    <title>Teacher</title>
+    <link rel="icon" href="../favicon.png">
+    <link rel="stylesheet" href="../css/style.css" type="text/css" />
+    <link rel="stylesheet" type="text/css" href="../css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="../css/bootstrap-theme.min.css">
+    <script src="../js/jquery-3.1.1.min.js"></script>
+    <script src="js/script.js"></script>
+</head>
+<body>
+    <div class="page-header" style="text-align: center;">
+        <h1>Teacher Page <small>Developers In Pyjamas</small></h1>
     </div>
-</div>
+        <div class="container" style="margin-top: 5%;">
+            <div class="row">
+                <div class="col-md-4">
+                    <h2 style="margin-bottom: 20px;">Факультет</h2>
+                    <div class="list-group">
+                        <button type="button" class="list-group-item">Cras justo odio</button>
+                        <button type="button" class="list-group-item">Dapibus ac facilisis in</button>
+                        <button type="button" class="list-group-item">Morbi leo risus</button>
+                        <button type="button" class="list-group-item">Porta ac consectetur ac</button>
+                        <button type="button" class="list-group-item">Vestibulum at eros</button>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <h2 style="margin-bottom: 20px;">Список групп</h2>
+                    <div class="list-group">
+                        <button type="button" class="list-group-item">Cras justo odio</button>
+                        <button type="button" class="list-group-item">Dapibus ac facilisis in</button>
+                        <button type="button" class="list-group-item">Morbi leo risus</button>
+                        <button type="button" class="list-group-item">Porta ac consectetur ac</button>
+                        <button type="button" class="list-group-item">Vestibulum at eros</button>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <h2 style="margin-bottom: 20px;">Список учащихся</h2>
+                    <div class="list-group">
+                        <button class="list-group-item">
+                            <input type="checkbox"> Check me out
+                        </button>
+                        <button class="list-group-item">
+                            <input type="checkbox"> Check me out
+                        </button>
+                        <button class="list-group-item">
+                            <input type="checkbox"> Check me out
+                        </button>
+                    </div>
+                    <input type="checkbox"> Выбрать всех </br></br>
+                    <button type="button" class="btn btn-primary">Отправить сообщение</button>
+                </div>
+            </div>
+        </div>
+<footer class="footer">
+    <div class="container">
+        <p class="text-muted">DiP</p>
+    </div>
+</footer>
+</body>
+</html>
