--- a/src/main/webapp/html/mainform.html
+++ b/src/main/webapp/html/mainform.html
@@ -7,7 +7,7 @@
             <a class="hiddenanchor" id="tologin"></a>
             <div id="wrapper">
                 <div id="login" class="animate form">
-                    <form  action="mysuperscript.php" autocomplete="on">
+                    <form  action="/auth" method="post" autocomplete="on">
                         <h1>Войти</h1>
                         <p>
                             <input id="username" name="username" required="required" type="text" placeholder="Ваш email или логин"/>
@@ -29,7 +29,7 @@
                     </form>
                 </div>
                 <div id="register" class="animate form">
-                    <form  action="mysuperscript.php" autocomplete="on">
+                    <form  action="/auth" method="post" autocomplete="on">
                         <h1> Регистрация </h1>
                         <p>
                             <input class="fa fa-address-book" id="surnamesignup" name="surnamesignup" required="required" type="text" placeholder="Фамилия"/>
