--- a/src/main/webapp/html/teacher.html
+++ b/src/main/webapp/html/teacher.html
@@ -1,16 +1,4 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="utf-8"/>
-    <title>Teacher</title>
-    <link rel="icon" href="../favicon.png">
-    <link rel="stylesheet" href="../css/style.css" type="text/css" />
-    <link rel="stylesheet" type="text/css" href="../css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="../css/bootstrap-theme.min.css">
-    <script src="../js/jquery-3.1.1.min.js"></script>
-    <script src="js/script.js"></script>
-</head>
-<body>
+<%@ page pageEncoding="utf-8"%>
     <div class="page-header" style="text-align: center;">
         <h1>Teacher Page <small>Developers In Pyjamas</small></h1>
     </div>
@@ -54,10 +42,3 @@
                 </div>
             </div>
         </div>
-<footer class="footer">
-    <div class="container">
-        <p class="text-muted">DiP</p>
-    </div>
-</footer>
-</body>
-</html>
