core web and pom commit 2:25

--- a/src/main/webapp/html/footer.html
+++ b/src/main/webapp/html/footer.html
@@ -1,7 +1,5 @@
-    <footer class="footer">
-        <div class="container">
-            <p class="text-muted">DiP</p>
-        </div>
-    </footer>
+<footer class="footer" style="background-color: #222;">
+
+</footer>
 </body>
 </html>
