--- a/src/main/webapp/html/adminka.html
+++ b/src/main/webapp/html/adminka.html
@@ -1,26 +1,11 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="utf-8"/>
-    <title>Admin Page</title>
-    <link rel="icon" href="../favicon.png">
-    <link rel="stylesheet" href="../css/style.css" type="text/css" />
-    <link rel="stylesheet" type="text/css" href="../css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="../css/bootstrap-theme.min.css">
-    <script src="../js/jquery-3.1.1.min.js"></script>
-    <script src="js/script.js"></script>
-</head>
-<body>
+<%@ page pageEncoding="utf-8"%>
 <div class="page-header" style="text-align: center;">
-    <h1>Admin <small>Developers In Pyjamas</small></h1>
+    <h1>Teacher Page <small>Developers In Pyjamas</small></h1>
 </div>
-
-
-
 <div class="container" style="margin-top: 5%;">
     <div class="row">
-        <div class="col-xs-6">
-            <h2 style="margin-bottom: 20px;">Авторизованные</h2>
+        <div class="col-md-4">
+            <h2 style="margin-bottom: 20px;">Факультет</h2>
             <div class="list-group">
                 <button type="button" class="list-group-item">Cras justo odio</button>
                 <button type="button" class="list-group-item">Dapibus ac facilisis in</button>
@@ -29,8 +14,18 @@
                 <button type="button" class="list-group-item">Vestibulum at eros</button>
             </div>
         </div>
-        <div class="col-xs-6">
-            <h2 style="margin-bottom: 20px;">Не авторизованные</h2>
+        <div class="col-md-4">
+            <h2 style="margin-bottom: 20px;">Список групп</h2>
+            <div class="list-group">
+                <button type="button" class="list-group-item">Cras justo odio</button>
+                <button type="button" class="list-group-item">Dapibus ac facilisis in</button>
+                <button type="button" class="list-group-item">Morbi leo risus</button>
+                <button type="button" class="list-group-item">Porta ac consectetur ac</button>
+                <button type="button" class="list-group-item">Vestibulum at eros</button>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <h2 style="margin-bottom: 20px;">Список учащихся</h2>
             <div class="list-group">
                 <button class="list-group-item">
                     <input type="checkbox"> Check me out
@@ -43,16 +38,7 @@
                 </button>
             </div>
             <input type="checkbox"> Выбрать всех </br></br>
-            <button type="button" class="btn btn-danger">Отклонить</button>
-            <button type="button" class="btn btn-primary">Авторизовать</button>
+            <button type="button" class="btn btn-primary">Отправить сообщение</button>
         </div>
     </div>
 </div>
-
-<footer class="footer">
-    <div class="container">
-        <p class="text-muted">DiP</p>
-    </div>
-</footer>
-</body>
-</html>
