--- a/src/main/webapp/html/header.html
+++ b/src/main/webapp/html/header.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -11,8 +12,19 @@
     <link rel="stylesheet" type="text/css" href="../css/bootstrap-theme.min.css">
     <script src="../js/jquery-3.1.1.min.js"></script>
     <script src="js/script.js"></script>
+    <style>
+        .footer {
+            position: absolute;
+            text-align: center;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            height: 80px;
+        }
+    </style>
 </head>
 <body>
-    <div class="page-header" style="text-align: center;">
-        <h1>Developers In Pyjamas</h1>
-    </div>
+
+<div class="page-header" style="text-align: center;">
+    <h1>Developers In Pyjamas</h1>
+</div>
