--- a/src/main/webapp/html/header.html
+++ b/src/main/webapp/html/header.html
@@ -14,7 +14,7 @@
     <script src="js/script.js"></script>
     <style>
         .footer {
-            position: absolute;
+            position: fixed;
             text-align: center;
             left: 0;
             bottom: 0;
