--- a/src/main/webapp/html/errorlogin.html
+++ b/src/main/webapp/html/errorlogin.html
@@ -21,7 +21,7 @@
     <div class="row">
         <div class="center-container" style="text-align: center;">
             <h1 style="color: #ff6441;">Вы ввели не верный логи или пароль, пожалуйста попробуйте снова или зарегестрируйтесь.</h1>
-            <button type="button" class="btn btn-primary">Вернуться на главную</button>
+            <a href="http://localhost:8080/"><button type="button" class="btn btn-primary">Вернуться на главную</button></a>
         </div>
     </div>
 </div>
