--- a/src/main/webapp/html/header.html
+++ b/src/main/webapp/html/header.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="../css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="../css/bootstrap-theme.min.css">
     <script src="../js/jquery-3.1.1.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="../js/main.js"></script>
     <style>
         .footer {
             position: fixed;
