somethink work. Damir

--- a/src/main/webapp/html/footer.html
+++ b/src/main/webapp/html/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer" style="background-color: #222;">
+<footer class="footer" style="/*background-color: #222;*/">
 
 </footer>
 </body>
