--- a/src/main/webapp/html/teacher2page.html
+++ b/src/main/webapp/html/teacher2page.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="utf-8"/>
@@ -11,16 +11,6 @@
     <link rel="stylesheet" type="text/css" href="../css/bootstrap-theme.min.css">
     <script src="../js/jquery-3.1.1.min.js"></script>
     <script src="../js/main.js"></script>
-    <style>
-        .footer {
-            position: fixed;
-            text-align: center;
-            left: 0;
-            bottom: 0;
-            width: 100%;
-            height: 80px;
-        }
-    </style>
 </head>
 <body>
 <div class="page-header" style="text-align: center;">
