--- a/src/main/webapp/html/teacher3page.html
+++ b/src/main/webapp/html/teacher3page.html
@@ -1,5 +1,18 @@
-<%@ page pageEncoding="utf-8"%>
-<%@include file="../html/header.html" %>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="utf-8"/>
+    <title>Teacher</title>
+    <link rel="icon" href="../favicon.png">
+    <link rel="stylesheet" href="../css/style.css" type="text/css" />
+    <link rel="stylesheet" href="../css/style-form.css" type="text/css" />
+    <link rel="stylesheet" href="css/fontawesome/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="../css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="../css/bootstrap-theme.min.css">
+    <script src="../js/jquery-3.1.1.min.js"></script>
+    <script src="../js/main.js"></script>
+</head>
+<body>
 <div class="page-header" style="text-align: center;">
     <h1>Teacher Page <small>Developers In Pyjamas</small></h1>
 </div>
@@ -29,4 +42,8 @@
         </div>
     </div>
 </div>
-<%@include file="../html/footer.html" %>
+<footer class="footer" style="background-color: #222;">
+
+</footer>
+</body>
+</htm
