--- a/src/main/webapp/html/errorlogin.html
+++ b/src/main/webapp/html/errorlogin.html
@@ -5,6 +5,7 @@
     <title>Error Page</title>
     <link rel="icon" href="../favicon.png">
     <link rel="stylesheet" href="../css/style.css" type="text/css" />
+    <link rel="stylesheet" href="../css/style-form.css" type="text/css" />
     <link rel="stylesheet" type="text/css" href="../css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="../css/bootstrap-theme.min.css">
     <script src="../js/jquery-3.1.1.min.js"></script>
@@ -35,7 +36,7 @@
         height: 80px;
     }
 </style>
-<footer class="footer" style="background-color: #222;">
+<footer class="footer" style="/*background-color: #222;*/">
 
 </footer>
 </body>
