--- a/src/main/webapp/html/errorlogin.html
+++ b/src/main/webapp/html/errorlogin.html
@@ -13,10 +13,8 @@
 </head>
 <body>
 <div class="page-header" style="text-align: center;">
-    <h1>Not really password or login. Please, try again! <small>Developers In Pyjamas</small></h1>
-</div>
-
-
+    <small>Developers In Pyjamas</small>
+    <h1>ОШИБКА!</h1>
 
 <div class="container" style="margin-top: 5%;">
     <div class="row">
