--- a/src/main/webapp/html/teacher.html
+++ b/src/main/webapp/html/teacher.html
@@ -13,7 +13,8 @@
 </head>
 <body>
 <div class="page-header" style="text-align: center;">
-    <h1>Teacher Page <small>Developers In Pyjamas</small></h1>
+    <small>Developers In Pyjamas</small>
+    <h1>Teacher Page</h1>
 </div>
 <div class="container" style="margin-top: 5%;">
     <div class="row">
