--- a/src/main/webapp/html/adminka.html
+++ b/src/main/webapp/html/adminka.html
@@ -1,6 +1,7 @@
 <%@ page pageEncoding="utf-8"%>
 <div class="page-header" style="text-align: center;">
-    <h1>Teacher Page <small>Developers In Pyjamas</small></h1>
+    <small>Developers In Pyjamas</small>
+    <h1>Admin Page</h1>
 </div>
 <div class="container" style="margin-top: 5%;">
     <div class="row">
