--- a/src/main/webapp/html/teacher3page.html
+++ b/src/main/webapp/html/teacher3page.html
@@ -42,8 +42,8 @@
         </div>
     </div>
 </div>
-<footer class="footer" style="background-color: #222;">
+<footer class="footer" style="/*background-color: #222;*/">
 
 </footer>
 </body>
-</htm
+</html>
