--- a/src/main/webapp/html/adminka.html
+++ b/src/main/webapp/html/adminka.html
@@ -1,4 +1,17 @@
-<%@ page pageEncoding="utf-8"%>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="utf-8"/>
+    <title>Teacher</title>
+    <link rel="icon" href="../favicon.png">
+    <link rel="stylesheet" href="../css/style.css" type="text/css" />
+    <link rel="stylesheet" href="../css/style-form.css" type="text/css" />
+    <link rel="stylesheet" type="text/css" href="../css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="../css/bootstrap-theme.min.css">
+    <script src="../js/jquery-3.1.1.min.js"></script>
+    <script src="../js/main.js"></script>
+</head>
+<body>
 <div class="page-header" style="text-align: center;">
     <small>Developers In Pyjamas</small>
     <h1>Admin Page</h1>
@@ -43,3 +56,8 @@
         </div>
     </div>
 </div>
+<footer class="footer" style="/*background-color: #222;*/">
+
+</footer>
+</body>
+</html>
