--- a/src/main/webapp/html/teacher.html
+++ b/src/main/webapp/html/teacher.html
@@ -56,8 +56,8 @@
         </div>
     </div>
 </div>
-<footer class="footer" style="background-color: #222;">
+<footer class="footer" style="/*background-color: #222;*/">
 
 </footer>
 </body>
-</htm
+</html>
