--- a/src/main/webapp/html/errorlogin.html
+++ b/src/main/webapp/html/errorlogin.html
@@ -19,7 +19,7 @@
 <div class="container" style="margin-top: 5%;">
     <div class="row">
         <div class="center-container" style="text-align: center;">
-            <h1 style="color: #ff6441;">Вы ввели не верный логи или пароль, пожалуйста попробуйте снова или зарегестрируйтесь.</h1>
+            <p style="font-size: 28px; color: #ff6441">Вы ввели неверный логин или пароль, пожалуйста попробуйте снова или зарегистрируйтесь.</p>
             <a href="http://localhost:8080/"><button type="button" class="btn btn-primary">Вернуться на главную</button></a>
         </div>
     </div>
